<resources>
    <string name="app_name">ColinTest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Colin</string>
    <string name="Username">N01101196</string>
    <string name="DateAndTime">Date and Time</string>
    <string name="Full_Name">Colin Blakley</string>
    <string name="download">Download</string>
    <string name="lastname">Blakley</string>
    <string name="get">Get Weather</string>
    <string name="frag1">CoHome</string>
    <string name="frag2">CoDown</string>
    <string name="frag3">BlSrv</string>
    <string name="frag4">Settings</string>
    <string name="header_title">Colin Blakley</string>
    <string name="ZipCode">ZipCode</string>
</resources>
