<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/CoHome"
                android:icon="@drawable/ic_home"
                android:title="@string/frag1" />
            <item
                android:id="@+id/CoDown"
                android:icon="@drawable/ic_download"
                android:title="@string/frag2" />
            <item
                android:id="@+id/BlSrv"
                android:icon="@drawable/ic_server"
                android:title="@string/frag3" />
            <item
                android:id="@+id/Settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/frag4" />
        </group>
    </menu>
