<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2980B9"
    android:orientation="vertical"
    tools:context=".BlSrv"
    tools:layout_editor_absoluteY="25dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="40dp"
        android:text="@string/lastname"
        android:textSize="15pt"
        app:layout_constraintBottom_toTopOf="@+id/colin11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/colin11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/ZipCode"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/colin08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/colin08"
        android:layout_width="137dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toTopOf="@+id/colin09"
        app:layout_constraintStart_toStartOf="@+id/colin11"
        app:layout_constraintTop_toBottomOf="@+id/colin11" />

    <TextView
        android:id="@+id/colin09"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/colin10"
        app:layout_constraintEnd_toEndOf="@+id/colin08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colin08" />

    <TextView
        android:id="@+id/colin10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/colin12"
        app:layout_constraintEnd_toEndOf="@+id/colin09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colin09" />

    <TextView
        android:id="@+id/colin12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/colin13"
        app:layout_constraintEnd_toEndOf="@+id/colin10"
        app:layout_constraintStart_toStartOf="@+id/colin13"
        app:layout_constraintTop_toBottomOf="@+id/colin10" />

    <Button
        android:id="@+id/colin13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="122dp"
        android:text="@string/get"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colin12" />


</android.support.constraint.ConstraintLayout>
